# psr_lakehouse

./: .buildinfo  .env.example  CLAUDE.md  Makefile  README.md  api.html  examples.html  genindex.html  index.html  installation.html  lint.bat  main.py  objects.inv  publish.bat  pyproject.toml  quickstart.html  ruff.toml  search.html  searchindex.js  setup.py  test.py  test_api.py
.claude/: settings.local.json
.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree
.github/workflows/: ci.yml  docs.yml  release.yml  tests.yml
_sources/: api.rst.txt  installation.rst.txt
_static/: alabaster.css  custom.css
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
docs/_static/: custom.css  theme-toggle.js
examples/: streamlit_ui_example.py
scripts/: generate_aliases.py  test_aliases.py
src/energy_data/: __init__.py  reader.py  retrieve.py
src/psr/lakehouse/: __init__.py  alias.py  aliases.py  client.py  connector.py  exceptions.py  metadata.py  ui_helpers.py
src/psr/lakehouse/aliases/: __init__.py  ccee.py  ons.py
src/psr/lakehouse/experiments/: iam.py
src/psr/warehouse/: client.py
tests/: conftest.py  test.bat  test_calculator.py  test_client.py  test_fetch.py  test_fetch_dataframe.py  test_retrieve.py
tests/integration/: conftest.py  test_integration.py
tests/unit/: conftest.py  test_ccee.py  test_client.py  test_connector.py  test_metadata.py  test_ons.py  test_ui_helpers.py
ui/: app.py
