[project]
name = "energy-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "raphasampaio", email = "rsampaio@psr-inc.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.0",
    "psycopg[binary]>=3.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
