[project]
name = "energy-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "raphasampaio", email = "rsampaio@psr-inc.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
